# Website-Flashcards

./: .gitignore  .pylintrc  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  tailwind.config.js
carddeck/: apps.py  views.py
carddeck/templates/: main.html  result.html
carddeck_website/: settings.py  urls.py  wsgi.py
src/: db.sqlite3  manage.py
src/carddeck/: models.py  urls.py  views.py
src/carddeck/migrations/: 0001_initial.py  0002_alter_cardgroup_name.py  0003_card_level.py
src/carddeck/templates/: base.html
src/carddeck/templates/head/: css.html
src/carddeck/templates/pages/: cards.html  groups.html  home.html  main.html  new_card.html  new_group.html  result.html  test.html
src/carddeck_website/: asgi.py  settings.py  urls.py
src/static/css/: output.css
src/static/custom/: custom.css
src/static/tw/: tailwind-input.css
